
2016-10-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* typeck.c (cb_list_system): simplified, removed hard-coded values
	* cobc.c: listing: allow page break to be disabled with -tlines=0

2016-10-15  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: improved checks for duplicate/conflicting clauses in ACCEPT
	  and DISPLAY statements (finished Edwards changes from 2016-10-02)

2016-10-13  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* codegen.c: fixed missing initialization of static_call_cache
	* flags.def, cobc.c, codegen.c: added new cb_flag_c_decl_for_static_call,
	  normally active, to create the option to disable the auto-generation of
	  C function declarations for static CALLs

2016-10-12  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>

	* parser.y: refactored handling of occurs to (setup_occurs) and
	 (setup_occurs_min_max)
	* parser.y (setup_occurs): check for TO without DEPENDING (allow for
	  relaxed syntax)
	* cobc.c (print_fields): print fixed size OCCURS without TO phrase
	* ppparse.y (set_choice): fixed bug #328 SIGSEGV for SET SOURCEFORMAT
	  directive without active listing
	* parser.y (mnemonic_name_clause): fixed buffer overflow on long
	  (unknown) system names

2016-10-11  Dave Pitts <dpitts@cozx.com>

	* cobc.c: Added OCCURS <minimum> TO <maximum> to print_fields() and
	  corrected length printout.
	  Also added "-R" to TYPE field for REDEFINES.

2016-10-08  Edward Hart <edward.dan.hart@gmail.com>

	* config.c: let reserved and not-reserved accept comma-separated lists

2016-10-02  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y: improved checks for duplicate/conflicting clauses in ACCEPT
	  and DISPLAY statements
	* codegen.c, parser.y, tree.h: introduced cob_flags_t typedef for
	  variables made up of bit flags
	* parser.y: improved function names
	* parser.y: improved support for ACUCOBOL screen phrases
	* config.def: added no-echo-means-secure config option
