@@ -1,4 +1,8 @@
 
+2016-10-17  Edward Hart <edward.dan.hart@gmail.com>
+
+	* scanner.l (RETURN): renamed to RETURN_TOK (see bug #330).
+
 2016-10-16  Simon 'sf-mensch/human' Sobisch <sf-mensch@users.sf.net>
 
 	* typeck.c (cb_list_system): simplified, removed hard-coded values
